8287090: Shenandoah: after updaterefs verification reports confusing error message