src/hotspot/share/gc/shenandoah/shenandoahConcurrentGC.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, Red Hat, Inc. All rights reserved.
+ * Copyright (c) 2021, 2022, Red Hat, Inc. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -971,18 +971,19 @@ void ShenandoahConcurrentGC::op_final_updaterefs() {
     heap->clear_cancelled_gc();
   }
 
+  heap->set_update_refs_in_progress(false);
+  heap->set_has_forwarded_objects(false);
+
   // Has to be done before cset is clear
   if (ShenandoahVerify) {
     heap->verifier()->verify_roots_in_to_space();
+    heap->verifier()->verify_after_updaterefs();
   }
 
   heap->update_heap_region_states(true /*concurrent*/);
 
-  heap->set_update_refs_in_progress(false);
-  heap->set_has_forwarded_objects(false);
-
   if (ShenandoahVerify) {
-    heap->verifier()->verify_after_updaterefs();
+    heap->verifier()->verify_no_cset_after_updaterefs();
   }
 
   if (VerifyAfterGC) {
